moved state for sidemenu up and overflow fixing

--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -1,8 +1,3 @@
-.MainPage-contentWrapper{
-	position: relative;
-	height: 100vh;
-}
-
 .MainPage-headCont{
 	background-color: #f5f5f5;
 	border-radius: 8px;
@@ -10,9 +5,3 @@
 	padding: 40px;
 
 }
-
-.MainPage-bodyCont{
-	position: absolute;
-	height: 85vh;
-}
-
